Project/Sources/styleSheets.css
 /* =====================================================
                    MAIN COLORS 
  =====================================================*/
text, 
radio,
checkbox,
listbox,
.comment {
	stroke: #808080;
}

			@media (prefers-color-scheme: dark) {
				text, 
				radio,
				checkbox,
				listbox {
					stroke: white;
				}
			}

input {
	fill: automatic;
}
	
		@media (prefers-color-scheme: dark) {
				input {
				fill: #3A3A3A;
				}
			}

.comment,
.infos {
	enterable: false;
}

.infos {
	fill: automatic;
}
	
		@media (prefers-color-scheme: dark) {
				.infos {
				fill: #3A3A3A;
				}
			}
 
line, 
rectangle {
	stroke: #C0C0C0;
}

			@media (prefers-color-scheme: dark) {
				line, 
				rectangle {
					stroke: white;
				}
			}

.toolbarButtons {
	stroke: #808080;
}

			@media (prefers-color-scheme: dark) {
				.toolbarButtons {
					stroke: white;
				}
			}

.border {
	fill: automatic;
}

			@media (prefers-color-scheme: dark) {
				.border {
					fill: #3A3A3A;
				}
			}

/* highlight color */
.highlight, 
.selected, 
.link, 
#focus { 
	stroke: #03A9F4 !important;
}

#focus { 
	fill: transparent;
}

.background {
	fill: automatic;
	stroke: transparent;
	sizingX: grow;
	sizingY: grow;
}

.label {
	text-align: left;
	stroke: grey;
}

			@media (prefers-color-scheme: dark) {
				.label {
					stroke: silver;
				}
			}


 /* =====================================================
                        BUTTONS 
  =====================================================*/
[defaultButton] {
	shortcutKey:[Return];
}


button#escape {
	/* shortcutKey: [Esc]; */
	focusable: false;
}

/* 
button#up {
	shortcutKey: [up arrow];
}
 */

/* 
button#down {
	shortcutKey: [down arrow];
}
 */

.link {
	text-decoration: underline;
	style: custom;
	cursor: pointer;
}


 /* =====================================================
                       LISTBOX 
  =====================================================*/
listbox {
	borderStyle: none;
	scrollbarHorizontal: hidden;
	showHeaders: false;
	resizingMode: legacy;
	horizontalLineStroke: transparent;
	verticalLineStroke: transparent;
	dragging: none;
	dropping: none;
	sortable: false;
	movableRows: false;
	verticalAlign: middle;
	hideExtraBlankRows: true;
}


 /* =====================================================
                       OTHERS	
  =====================================================*/

input {
	borderStyle: none;
	contextMenu: automatic
}

input, listbox {
	hideFocusRing: true;
}

